<resources>
    <string name="app_name">MealPlanner</string>
    <string name="giniling">Giniling</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_user">Welcome user</string>
    <string name="weekly_meal_planner">Weekly Meal Planner</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome_message">Welcome %1$s</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="recipes">Recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="logout">Logout</string>
    <string name="users">Users</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="go_back">Go back</string>
    <string name="list_of_users">List of Users</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="edit">edit</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="meal_planner_logs">Meal Planner Logs</string>
    <string name="user">User</string>
    <string name="logs">Logs</string>
</resources>